# pwa-builder

./: README.md  package-lock.json  package.json  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: router.js  socket.js
frontend/src/components/: Drawer.vue  Project.vue  ProjectPage.vue
frontend/src/form/components/: Autocomplete.vue  Button.vue  Checkbox.vue  Date.vue  DateTime.vue  FileUploader.vue  Int.vue  Password.vue  Phone.vue  Select.vue  Table.vue  Text.vue  TextArea.vue  Time.vue
frontend/src/pages/: ForgetPassword.vue  Home.vue  Login.vue  SignUp.vue
frontend/src/pages/builder/: Builder.vue  base_builder.js  builder.txt
pwa_builder/: api.py  hooks.py  modules.txt  rename_template_app.py
pwa_builder/public/frontend/: index.html
pwa_builder/public/frontend/assets/: Builder.47e2d768.css  Builder.9fa4808d.js  FontColor.141172de.js  FontColor.ff31e8b5.js  ForgetPassword.0f7c4f03.js  ForgetPassword.87f3b561.css  Home.4ebe753f.css  Home.71fae86b.js  Home.c579c168.js  InsertImage.4e1024ba.js  InsertImage.de21895e.js  InsertLink.42c118ae.js  InsertLink.6eb7c3ad.js  InsertVideo.5ff3f398.js  InsertVideo.6f1f0990.js  Login.5a44fa57.js  SignUp.0e286c3d.js  SignUp.c9440c69.css  index.33310f89.js  index.37b5f40a.css  index.a97e8086.js  index.fbc2a488.css  vendor.412e1a19.js  vendor.adf9dd71.js
pwa_builder/pwa_builder/doctype/pwa_doctype/: pwa_doctype.js  pwa_doctype.json  pwa_doctype.py  test_pwa_doctype.py
pwa_builder/pwa_builder/doctype/pwa_github_integration/: pwa_github_integration.js  (+3 more)
pwa_builder/www/: frontend.html
(+8 files in other folders)
